Created structure of the bank page
created the structure of the bank page, now will work on manipulating the dom

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="login-container">
 
             <h2 id="login-header">Please Login</h2>
-            <input type="email" name="" id="user-email" placeholder="Enter your email">
-            <input type="password" name="" id="user-password" placeholder="Enter your password">
+            <input type="email" name="" id="user-email" class="primary-inp" placeholder="Enter your email">
+            <input type="password" name="" id="user-password" class="primary-inp" placeholder="Enter your password">
             <button class="primary-btn" id="login-btn">Login</button>
 
         </div>
